# blankproject

./: .env.dist  Dockerfile  README.md  flake.nix  pyproject.toml
application/: invoke.py
