[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Martijn Boers <martijn@boers.email>"]
readme = "README.md"
packages = [
  { include = "application" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
application = "application.invoke:process"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
